tests/ui/rfcs/rfc-2632-const-trait-impl/std-impl-gate.gated.stderr
error[E0635]: unknown feature `const_default_impls`
  --> $DIR/std-impl-gate.rs:6:46
   |
LL | #![cfg_attr(gated, feature(const_trait_impl, const_default_impls))]
   |                                              ^^^^^^^^^^^^^^^^^^^

error[E0015]: cannot call non-const fn `<Vec<usize> as Default>::default` in constant functions
  --> $DIR/std-impl-gate.rs:13:5
   |
LL |     Default::default()
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(effects)]` to the crate attributes to enable

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0635.
For more information about an error, try `rustc --explain E0015`.
